# vibescity-live

./: .biomeignore  .coverage  .env.example  .firebaserc  .gitattributes  .gitignore  .gitleaks.toml  .infisical.json  .pr_body.md  .sonarcloud.properties  .vercelignore  ACTIVATION_SUMMARY_TH.md  AGENT_SKILLS_AND_COMMANDS.md  DASHBOARD_MIGRATION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ERROR_FIX_PLAN.md  FIXES_APPLIED.md  FIXES_COMPLETED.md  GEMINI.md  NEON_SIGNS_DEBUG_GUIDE.md  PERFORMANCE_FIX.md  PHASE1_ACTIVATED.md  PHASE1_COMPLETE.md  PR_CHECKLIST.md  Procfile  QUICKSTART.md  QUICK_FIX_SUMMARY.md  README.md  README.txt  README.txt.txt  README_PHASE_COMPLETE.md  admin-dashboard-fallback-cache-phase12.md  backend-ruff-errors.txt  backend-ruff-errors2.txt  backend-ruff-errors3.txt  biome.json  build_output.txt  build_report.txt  bundle-budget.json  (+116 more)
backend/: .coverage  .env.example  check_pydantic.py  constraints-production.txt  debug_config.py  debug_main.py  diagnose.py  explicit_error.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_backend.ps1  run_backend.py  test_logging_standalone.py
backend/app/: main.py
backend/credentials/: README.md  google-sheets-credentials.example.json
backend/db/: rpc.sql  schema.sql  schema_current.sql
backend/docs/: CSP_QUICK_REFERENCE.md  SECURITY_HEADERS.md  tracing.md
backend/migrations/: fix_db_critical_issues.sql
backend/scripts/: bootstrap_new_db.py  check_columns.py  csp_monitor.py  data_pipeline.py  debug_venues_insert.py  execute_enterprise_updates.py  export_schema_snapshot.py  fetch_street_view.py  fix_venues_schema.py  ingest_knowledge.py  list_tables.py  manage_memory.py  ocr_worker.py  osm_scraper.py  (+8 more)
(+1767 files in other folders)
