[project]
name = "vibecity-backend"
version = "0.1.0"
description = "VibeCity Real-time Backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "stripe>=8.1.0",
    "websockets>=12.0",
    "supabase>=2.3.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.7"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "httpx>=0.26.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
